fix: overflow x in code

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,9 +1,7 @@
-html,
-body {
+html, body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 18px;
 }
@@ -25,17 +23,21 @@ img {
   max-width: 100%;
   display: block;
 }
+
 pre {
   background: #2d2d2d;
   color: lightGray;
   font-size: 13px;
   padding: 0;
   padding: 10px;
+  overflow-x: auto;
+  display: flex
 }
 
 pre .o {
   color: orange;
 }
+
 pre.w {
   color: white;
 }
